--- a/LicenseManager/LicenseManager.csproj
+++ b/LicenseManager/LicenseManager.csproj
@@ -44,14 +44,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="CreateLicense.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="CreateLicense.Designer.cs">
+      <DependentUpon>CreateLicense.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FirstStart.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FirstStart.Designer.cs">
+      <DependentUpon>FirstStart.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Manager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manager.Designer.cs">
+      <DependentUpon>Manager.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="CreateLicense.resx">
+      <DependentUpon>CreateLicense.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FirstStart.resx">
+      <DependentUpon>FirstStart.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Manager.resx">
+      <DependentUpon>Manager.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
