--- a/LicenseManager/App.config
+++ b/LicenseManager/App.config
@@ -16,6 +16,21 @@
             <setting name="Path" serializeAs="String">
                 <value />
             </setting>
+            <setting name="FTP_Server" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="FTP_User" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="FTP_Password" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="PublicKey" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="PrivateKey" serializeAs="String">
+                <value />
+            </setting>
         </LicenseManager.Properties.Settings>
     </userSettings>
 </configuration>
